# ympa

./: .Rbuildignore  .gitignore  .gitlab-ci.yml  .travis.yml  AcceptOrderCancellationRequest.avsc  AddHiddenOffersRequest.avsc  AddOffersToArchiveDTO.avsc  AddOffersToArchiveErrorDTO.avsc  AddOffersToArchiveErrorType.avsc  AddOffersToArchiveRequest.avsc  AddOffersToArchiveResponse.avsc  AffectedOrderQualityRatingComponentType.avsc  AgeDTO.avsc  AgeUnitType.avsc  Api.ts  ApiClientDataErrorResponse.avsc  ApiErrorDTO.avsc  ApiErrorResponse.avsc  ApiForbiddenErrorResponse.avsc  ApiLimitErrorResponse.avsc  ApiLockedErrorResponse.avsc  ApiNotFoundErrorResponse.avsc  ApiResponse.avsc  ApiResponseStatusType.avsc  ApiServerErrorResponse.avsc  ApiServiceBinder.ts  ApiUnauthorizedErrorResponse.avsc  AuthStorage.ts  BaseCampaignOfferDTO.avsc  BaseOfferDTO.avsc  BasePriceDTO.avsc  BaseShipmentDTO.avsc  BidRecommendationItemDTO.avsc  BidsApi.conf  BidsApi.csv  BidsApi.jmx  BidsApi.ts  BriefOrderItemDTO.avsc  BriefOrderItemInstanceDTO.avsc  Build.ps1  (+1413 more)
.openapi-generator/: FILES
Api/: AbstractBidsApi.php  AbstractBusinessOfferMappingsApi.php  AbstractBusinessesApi.php  AbstractCampaignsApi.php  AbstractCategoriesApi.php  AbstractChatsApi.php  AbstractContentApi.php  AbstractDbsApi.php  AbstractDeliveryServicesApi.php  AbstractExpressApi.php  AbstractFbsApi.php  AbstractFbyApi.php  AbstractFeedbacksApi.php  AbstractFeedsApi.php  AbstractGoodsFeedbackApi.php  AbstractGoodsStatsApi.php  AbstractHiddenOffersApi.php  AbstractModelsApi.php  AbstractOfferMappingsApi.php  AbstractOffersApi.php  AbstractOrderBusinessInformationApi.php  AbstractOrderDeliveryApi.php  AbstractOrderLabelsApi.php  AbstractOrdersApi.php  AbstractOrdersStatsApi.php  AbstractOutletLicensesApi.php  AbstractOutletsApi.php  AbstractPriceQuarantineApi.php  AbstractPricesApi.php  AbstractPromosApi.php  AbstractRatingsApi.php  AbstractRegionsApi.php  AbstractReportsApi.php  AbstractReturnsApi.php  AbstractShipmentsApi.php  AbstractStocksApi.php  AbstractTariffsApi.php  AbstractWarehousesApi.php  ApiServer.php  BidsApiInterface.php  (+37 more)
Apis/: BidsApi.http  BidsApi.md  BusinessOfferMappingsApi.http  BusinessOfferMappingsApi.md  BusinessesApi.http  BusinessesApi.md  CampaignsApi.http  CampaignsApi.md  CategoriesApi.http  CategoriesApi.md  ChatsApi.http  ChatsApi.md  ContentApi.http  ContentApi.md  DbsApi.http  DbsApi.md  DeliveryServicesApi.http  DeliveryServicesApi.md  ExpressApi.http  ExpressApi.md  FbsApi.http  FbsApi.md  FbyApi.http  FbyApi.md  FeedbacksApi.http  FeedbacksApi.md  FeedsApi.http  FeedsApi.md  GoodsFeedbackApi.http  GoodsFeedbackApi.md  GoodsStatsApi.http  GoodsStatsApi.md  HiddenOffersApi.http  HiddenOffersApi.md  ModelsApi.http  ModelsApi.md  OfferMappingsApi.http  OfferMappingsApi.md  OffersApi.http  OffersApi.md  (+37 more)
Controller/: BidsController.php  BusinessOfferMappingsController.php  BusinessesController.php  CampaignsController.php  CategoriesController.php  ChatsController.php  ContentController.php  Controller.php  DbsController.php  DeliveryServicesController.php  ExpressController.php  FbsController.php  FbyController.php  FeedbacksController.php  FeedsController.php  GoodsFeedbackController.php  GoodsStatsController.php  HiddenOffersController.php  ModelsController.php  OfferMappingsController.php  OffersController.php  OrderBusinessInformationController.php  OrderDeliveryController.php  OrderLabelsController.php  OrdersController.php  OrdersStatsController.php  OutletLicensesController.php  OutletsController.php  PriceQuarantineController.php  PricesController.php  PromosController.php  RatingsController.php  RegionsController.php  ReportsController.php  ReturnsController.php  ShipmentsController.php  StocksController.php  TariffsController.php  WarehousesController.php
DependencyInjection/: OpenAPIServerExtension.php
Model/: AcceptOrderCancellationRequest.php  AcceptOrderCancellationRequest.sql  AddHiddenOffersRequest.php  AddHiddenOffersRequest.sql  AddOffersToArchiveDTO.php  AddOffersToArchiveDTO.sql  AddOffersToArchiveErrorDTO.php  AddOffersToArchiveErrorDTO.sql  AddOffersToArchiveErrorType.php  AddOffersToArchiveErrorType.sql  AddOffersToArchiveRequest.php  AddOffersToArchiveRequest.sql  AddOffersToArchiveResponse.php  AddOffersToArchiveResponse.sql  AffectedOrderQualityRatingComponentType.php  AffectedOrderQualityRatingComponentType.sql  AgeDTO.php  AgeDTO.sql  AgeUnitType.php  AgeUnitType.sql  ApiClientDataErrorResponse.php  ApiClientDataErrorResponse.sql  ApiErrorDTO.php  ApiErrorDTO.sql  ApiErrorResponse.php  ApiErrorResponse.sql  ApiForbiddenErrorResponse.php  ApiForbiddenErrorResponse.sql  ApiLimitErrorResponse.php  ApiLimitErrorResponse.sql  ApiLockedErrorResponse.php  ApiLockedErrorResponse.sql  ApiNotFoundErrorResponse.php  ApiNotFoundErrorResponse.sql  ApiResponse.php  ApiResponse.sql  ApiResponseStatusType.php  ApiResponseStatusType.sql  ApiServerErrorResponse.php  (+1147 more)
client/: CMakeLists.txt  OAIAcceptOrderCancellationRequest.cpp  OAIAcceptOrderCancellationRequest.h  OAIAddHiddenOffersRequest.cpp  OAIAddHiddenOffersRequest.h  OAIAddOffersToArchiveDTO.cpp  OAIAddOffersToArchiveDTO.h  OAIAddOffersToArchiveErrorDTO.cpp  OAIAddOffersToArchiveErrorDTO.h  OAIAddOffersToArchiveRequest.cpp  OAIAddOffersToArchiveRequest.h  OAIAddOffersToArchiveResponse.cpp  OAIAddOffersToArchiveResponse.h  OAIAgeDTO.cpp  OAIAgeDTO.h  OAIAgeUnitType.cpp  OAIApiClientDataErrorResponse.cpp  OAIApiClientDataErrorResponse.h  OAIApiErrorDTO.cpp  OAIApiErrorDTO.h  OAIApiErrorResponse.cpp  OAIApiErrorResponse.h  OAIApiForbiddenErrorResponse.cpp  OAIApiForbiddenErrorResponse.h  OAIApiLimitErrorResponse.cpp  OAIApiLimitErrorResponse.h  OAIApiLockedErrorResponse.cpp  OAIApiLockedErrorResponse.h  OAIApiNotFoundErrorResponse.cpp  OAIApiNotFoundErrorResponse.h  OAIApiResponse.cpp  OAIApiResponse.h  OAIApiResponseStatusType.cpp  OAIApiResponseStatusType.h  OAIApiServerErrorResponse.cpp  OAIApiServerErrorResponse.h  OAIApiUnauthorizedErrorResponse.cpp  OAIApiUnauthorizedErrorResponse.h  OAIBaseCampaignOfferDTO.cpp  OAIBaseCampaignOfferDTO.h  (+1115 more)
(+77439 files in other folders)
