cmake_minimum_required(VERSION 3.5)

project(ympa_cpp_qt_client)

set(CMAKE_AUTOMOC ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Network Gui)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Network Gui)

include(GNUInstallDirs)
include(CMakePackageConfigHelpers)

add_library(${PROJECT_NAME}
  OAIAcceptOrderCancellationRequest.h
  OAIAddHiddenOffersRequest.h
  OAIAddOffersToArchiveDTO.h
  OAIAddOffersToArchiveErrorDTO.h
  OAIAddOffersToArchiveErrorType.h
  OAIAddOffersToArchiveRequest.h
  OAIAddOffersToArchiveResponse.h
  OAIAffectedOrderQualityRatingComponentType.h
  OAIAgeDTO.h
  OAIAgeUnitType.h
  OAIApiClientDataErrorResponse.h
  OAIApiErrorDTO.h
  OAIApiErrorResponse.h
  OAIApiForbiddenErrorResponse.h
  OAIApiLimitErrorResponse.h
  OAIApiLockedErrorResponse.h
  OAIApiNotFoundErrorResponse.h
  OAIApiResponse.h
  OAIApiResponseStatusType.h
  OAIApiServerErrorResponse.h
  OAIApiUnauthorizedErrorResponse.h
  OAIBaseCampaignOfferDTO.h
  OAIBaseOfferDTO.h
  OAIBasePriceDTO.h
  OAIBaseShipmentDTO.h
  OAIBidRecommendationItemDTO.h
  OAIBriefOrderItemDTO.h
  OAIBriefOrderItemInstanceDTO.h
  OAIBusinessDTO.h
  OAIBusinessSettingsDTO.h
  OAICalculateTariffsOfferDTO.h
  OAICalculateTariffsOfferInfoDTO.h
  OAICalculateTariffsParametersDTO.h
  OAICalculateTariffsRequest.h
  OAICalculateTariffsResponse.h
  OAICalculateTariffsResponseDTO.h
  OAICalculatedTariffDTO.h
  OAICalculatedTariffType.h
  OAICampaignDTO.h
  OAICampaignQualityRatingDTO.h
  OAICampaignSettingsDTO.h
  OAICampaignSettingsDeliveryDTO.h
  OAICampaignSettingsLocalRegionDTO.h
  OAICampaignSettingsScheduleDTO.h
  OAICampaignSettingsScheduleSourceType.h
  OAICampaignSettingsTimePeriodDTO.h
  OAICampaignsQualityRatingDTO.h
  OAICategoryContentParametersDTO.h
  OAICategoryDTO.h
  OAICategoryErrorDTO.h
  OAICategoryErrorType.h
  OAICategoryParameterDTO.h
  OAICategoryParameterUnitDTO.h
  OAIChangeOutletRequest.h
  OAIChannelType.h
  OAIChatMessageDTO.h
  OAIChatMessagePayloadDTO.h
  OAIChatMessageSenderType.h
  OAIChatMessagesResultDTO.h
  OAIChatStatusType.h
  OAIChatType.h
  OAIConfirmPricesRequest.h
  OAIConfirmShipmentRequest.h
  OAICreateChatRequest.h
  OAICreateChatResponse.h
  OAICreateChatResultDTO.h
  OAICreateOutletResponse.h
  OAICurrencyType.h
  OAIDayOfWeekType.h
  OAIDeleteCampaignOffersDTO.h
  OAIDeleteCampaignOffersRequest.h
  OAIDeleteCampaignOffersResponse.h
  OAIDeleteGoodsFeedbackCommentRequest.h
  OAIDeleteHiddenOffersRequest.h
  OAIDeleteOffersDTO.h
  OAIDeleteOffersFromArchiveDTO.h
  OAIDeleteOffersFromArchiveRequest.h
  OAIDeleteOffersFromArchiveResponse.h
  OAIDeleteOffersRequest.h
  OAIDeleteOffersResponse.h
  OAIDeletePromoOffersRequest.h
  OAIDeletePromoOffersResponse.h
  OAIDeletePromoOffersResultDTO.h
  OAIDeliveryServiceDTO.h
  OAIDeliveryServiceInfoDTO.h
  OAIDeliveryServicesDTO.h
  OAIDocumentDTO.h
  OAIEacVerificationResultDTO.h
  OAIEacVerificationStatusType.h
  OAIEmptyApiResponse.h
  OAIEnrichedMappingsOfferDTO.h
  OAIEnrichedModelDTO.h
  OAIEnrichedModelsDTO.h
  OAIEnrichedOrderBoxLayoutDTO.h
  OAIExtensionShipmentDTO.h
  OAIFeedContentDTO.h
  OAIFeedContentErrorDTO.h
  OAIFeedContentErrorType.h
  OAIFeedDTO.h
  OAIFeedDownloadDTO.h
  OAIFeedDownloadErrorDTO.h
  OAIFeedDownloadErrorType.h
  OAIFeedIndexLogsErrorDTO.h
  OAIFeedIndexLogsErrorType.h
  OAIFeedIndexLogsFeedDTO.h
  OAIFeedIndexLogsIndexType.h
  OAIFeedIndexLogsOffersDTO.h
  OAIFeedIndexLogsRecordDTO.h
  OAIFeedIndexLogsResultDTO.h
  OAIFeedIndexLogsStatusType.h
  OAIFeedParameterDTO.h
  OAIFeedPlacementDTO.h
  OAIFeedPublicationDTO.h
  OAIFeedPublicationFullDTO.h
  OAIFeedPublicationPriceAndStockUpdateDTO.h
  OAIFeedStatusType.h
  OAIFeedbackAuthorDTO.h
  OAIFeedbackCommentAuthorDTO.h
  OAIFeedbackCommentAuthorType.h
  OAIFeedbackCommentDTO.h
  OAIFeedbackDTO.h
  OAIFeedbackDeliveryType.h
  OAIFeedbackFactorDTO.h
  OAIFeedbackGradesDTO.h
  OAIFeedbackListDTO.h
  OAIFeedbackOrderDTO.h
  OAIFeedbackReactionStatusType.h
  OAIFeedbackShopDTO.h
  OAIFeedbackStateType.h
  OAIFieldStateType.h
  OAIFlippingPagerDTO.h
  OAIForwardScrollingPagerDTO.h
  OAIFulfillmentWarehouseDTO.h
  OAIFulfillmentWarehousesDTO.h
  OAIFullOutletDTO.h
  OAIFullOutletLicenseDTO.h
  OAIGenerateBoostConsolidatedRequest.h
  OAIGenerateCompetitorsPositionReportRequest.h
  OAIGenerateGoodsFeedbackRequest.h
  OAIGenerateGoodsMovementReportRequest.h
  OAIGenerateGoodsRealizationReportRequest.h
  OAIGenerateGoodsTurnoverRequest.h
  OAIGenerateMassOrderLabelsRequest.h
  OAIGeneratePricesReportRequest.h
  OAIGenerateReportDTO.h
  OAIGenerateReportResponse.h
  OAIGenerateShelfsStatisticsRequest.h
  OAIGenerateShipmentListDocumentReportRequest.h
  OAIGenerateShowsSalesReportRequest.h
  OAIGenerateStocksOnWarehousesReportRequest.h
  OAIGenerateUnitedMarketplaceServicesReportRequest.h
  OAIGenerateUnitedNettingReportRequest.h
  OAIGenerateUnitedOrdersRequest.h
  OAIGetAllOffersResponse.h
  OAIGetBidsInfoRequest.h
  OAIGetBidsInfoResponse.h
  OAIGetBidsInfoResponseDTO.h
  OAIGetBidsRecommendationsRequest.h
  OAIGetBidsRecommendationsResponse.h
  OAIGetBidsRecommendationsResponseDTO.h
  OAIGetBusinessBuyerInfoResponse.h
  OAIGetBusinessDocumentsInfoResponse.h
  OAIGetBusinessSettingsInfoDTO.h
  OAIGetBusinessSettingsResponse.h
  OAIGetCampaignLoginsResponse.h
  OAIGetCampaignOfferDTO.h
  OAIGetCampaignOffersRequest.h
  OAIGetCampaignOffersResponse.h
  OAIGetCampaignOffersResultDTO.h
  OAIGetCampaignRegionResponse.h
  OAIGetCampaignResponse.h
  OAIGetCampaignSettingsResponse.h
  OAIGetCampaignsResponse.h
  OAIGetCategoriesMaxSaleQuantumDTO.h
  OAIGetCategoriesMaxSaleQuantumRequest.h
  OAIGetCategoriesMaxSaleQuantumResponse.h
  OAIGetCategoriesRequest.h
  OAIGetCategoriesResponse.h
  OAIGetCategoryContentParametersResponse.h
  OAIGetChatHistoryRequest.h
  OAIGetChatHistoryResponse.h
  OAIGetChatInfoDTO.h
  OAIGetChatsInfoDTO.h
  OAIGetChatsRequest.h
  OAIGetChatsResponse.h
  OAIGetDeliveryServicesResponse.h
  OAIGetFeedIndexLogsResponse.h
  OAIGetFeedResponse.h
  OAIGetFeedbackListResponse.h
  OAIGetFeedsResponse.h
  OAIGetFulfillmentWarehousesResponse.h
  OAIGetGoodsFeedbackCommentsRequest.h
  OAIGetGoodsFeedbackCommentsResponse.h
  OAIGetGoodsFeedbackRequest.h
  OAIGetGoodsFeedbackResponse.h
  OAIGetGoodsStatsRequest.h
  OAIGetGoodsStatsResponse.h
  OAIGetHiddenOffersResponse.h
  OAIGetHiddenOffersResultDTO.h
  OAIGetMappingDTO.h
  OAIGetModelsOffersResponse.h
  OAIGetModelsRequest.h
  OAIGetModelsResponse.h
  OAIGetOfferCardsContentStatusRequest.h
  OAIGetOfferCardsContentStatusResponse.h
  OAIGetOfferDTO.h
  OAIGetOfferMappingDTO.h
  OAIGetOfferMappingEntriesResponse.h
  OAIGetOfferMappingsRequest.h
  OAIGetOfferMappingsResponse.h
  OAIGetOfferMappingsResultDTO.h
  OAIGetOfferRecommendationsRequest.h
  OAIGetOfferRecommendationsResponse.h
  OAIGetOffersResponse.h
  OAIGetOrderBuyerInfoResponse.h
  OAIGetOrderLabelsDataResponse.h
  OAIGetOrderResponse.h
  OAIGetOrdersResponse.h
  OAIGetOrdersStatsRequest.h
  OAIGetOrdersStatsResponse.h
  OAIGetOutletLicensesResponse.h
  OAIGetOutletResponse.h
  OAIGetOutletsResponse.h
  OAIGetPriceDTO.h
  OAIGetPriceWithDiscountDTO.h
  OAIGetPriceWithVatDTO.h
  OAIGetPricesByOfferIdsRequest.h
  OAIGetPricesByOfferIdsResponse.h
  OAIGetPricesResponse.h
  OAIGetPromoAssortmentInfoDTO.h
  OAIGetPromoBestsellerInfoDTO.h
  OAIGetPromoConstraintsDTO.h
  OAIGetPromoDTO.h
  OAIGetPromoMechanicsInfoDTO.h
  OAIGetPromoOfferDTO.h
  OAIGetPromoOffersRequest.h
  OAIGetPromoOffersResponse.h
  OAIGetPromoOffersResultDTO.h
  OAIGetPromoPromocodeInfoDTO.h
  OAIGetPromosRequest.h
  OAIGetPromosResponse.h
  OAIGetPromosResultDTO.h
  OAIGetQualityRatingDetailsResponse.h
  OAIGetQualityRatingRequest.h
  OAIGetQualityRatingResponse.h
  OAIGetQuarantineOffersRequest.h
  OAIGetQuarantineOffersResponse.h
  OAIGetQuarantineOffersResultDTO.h
  OAIGetRegionWithChildrenResponse.h
  OAIGetRegionsResponse.h
  OAIGetReportInfoResponse.h
  OAIGetReturnResponse.h
  OAIGetReturnsResponse.h
  OAIGetShipmentOrdersInfoResponse.h
  OAIGetShipmentResponse.h
  OAIGetSuggestedOfferMappingEntriesRequest.h
  OAIGetSuggestedOfferMappingEntriesResponse.h
  OAIGetSuggestedOfferMappingsRequest.h
  OAIGetSuggestedOfferMappingsResponse.h
  OAIGetSuggestedOfferMappingsResultDTO.h
  OAIGetWarehouseStocksDTO.h
  OAIGetWarehouseStocksRequest.h
  OAIGetWarehouseStocksResponse.h
  OAIGetWarehousesResponse.h
  OAIGoodsFeedbackCommentAuthorDTO.h
  OAIGoodsFeedbackCommentAuthorType.h
  OAIGoodsFeedbackCommentDTO.h
  OAIGoodsFeedbackCommentListDTO.h
  OAIGoodsFeedbackCommentStatusType.h
  OAIGoodsFeedbackDTO.h
  OAIGoodsFeedbackDescriptionDTO.h
  OAIGoodsFeedbackIdentifiersDTO.h
  OAIGoodsFeedbackListDTO.h
  OAIGoodsFeedbackMediaDTO.h
  OAIGoodsFeedbackStatisticsDTO.h
  OAIGoodsStatsDTO.h
  OAIGoodsStatsGoodsDTO.h
  OAIGoodsStatsWarehouseDTO.h
  OAIGoodsStatsWeightDimensionsDTO.h
  OAIGpsDTO.h
  OAIHiddenOfferDTO.h
  OAILanguageType.h
  OAILicenseCheckStatusType.h
  OAILicenseType.h
  OAILogisticPickupPointDTO.h
  OAILogisticPointType.h
  OAIMappingsOfferDTO.h
  OAIMappingsOfferInfoDTO.h
  OAIMaxSaleQuantumDTO.h
  OAIMechanicsType.h
  OAIModelDTO.h
  OAIModelOfferDTO.h
  OAIModelPriceDTO.h
  OAIModelsDTO.h
  OAIOfferAvailabilityStatusType.h
  OAIOfferCampaignStatusDTO.h
  OAIOfferCampaignStatusType.h
  OAIOfferCardDTO.h
  OAIOfferCardRecommendationDTO.h
  OAIOfferCardRecommendationType.h
  OAIOfferCardStatusType.h
  OAIOfferCardsContentStatusDTO.h
  OAIOfferConditionDTO.h
  OAIOfferConditionQualityType.h
  OAIOfferConditionType.h
  OAIOfferContentDTO.h
  OAIOfferContentErrorDTO.h
  OAIOfferContentErrorType.h
  OAIOfferDTO.h
  OAIOfferErrorDTO.h
  OAIOfferForRecommendationDTO.h
  OAIOfferManualDTO.h
  OAIOfferMappingDTO.h
  OAIOfferMappingEntriesDTO.h
  OAIOfferMappingEntryDTO.h
  OAIOfferMappingErrorDTO.h
  OAIOfferMappingErrorType.h
  OAIOfferMappingInfoDTO.h
  OAIOfferMappingKindType.h
  OAIOfferMappingSuggestionsListDTO.h
  OAIOfferParamDTO.h
  OAIOfferPriceByOfferIdsListResponseDTO.h
  OAIOfferPriceByOfferIdsResponseDTO.h
  OAIOfferPriceDTO.h
  OAIOfferPriceListResponseDTO.h
  OAIOfferPriceResponseDTO.h
  OAIOfferProcessingNoteDTO.h
  OAIOfferProcessingNoteType.h
  OAIOfferProcessingStateDTO.h
  OAIOfferProcessingStatusType.h
  OAIOfferRecommendationDTO.h
  OAIOfferRecommendationInfoDTO.h
  OAIOfferRecommendationsResultDTO.h
  OAIOfferSellingProgramDTO.h
  OAIOfferSellingProgramStatusType.h
  OAIOfferType.h
  OAIOfferWeightDimensionsDTO.h
  OAIOffersDTO.h
  OAIOptionValuesLimitedDTO.h
  OAIOrderBoxLayoutDTO.h
  OAIOrderBoxLayoutItemDTO.h
  OAIOrderBoxLayoutPartialCountDTO.h
  OAIOrderBoxesLayoutDTO.h
  OAIOrderBusinessBuyerDTO.h
  OAIOrderBusinessDocumentsDTO.h
  OAIOrderBuyerBasicInfoDTO.h
  OAIOrderBuyerDTO.h
  OAIOrderBuyerInfoDTO.h
  OAIOrderBuyerType.h
  OAIOrderCancellationReasonType.h
  OAIOrderCourierDTO.h
  OAIOrderDTO.h
  OAIOrderDeliveryAddressDTO.h
  OAIOrderDeliveryDTO.h
  OAIOrderDeliveryDateDTO.h
  OAIOrderDeliveryDateReasonType.h
  OAIOrderDeliveryDatesDTO.h
  OAIOrderDeliveryDispatchType.h
  OAIOrderDeliveryEacType.h
  OAIOrderDeliveryPartnerType.h
  OAIOrderDeliveryType.h
  OAIOrderDigitalItemDTO.h
  OAIOrderDocumentStatusType.h
  OAIOrderItemDTO.h
  OAIOrderItemDetailDTO.h
  OAIOrderItemInstanceDTO.h
  OAIOrderItemInstanceModificationDTO.h
  OAIOrderItemInstanceType.h
  OAIOrderItemModificationDTO.h
  OAIOrderItemPromoDTO.h
  OAIOrderItemStatusType.h
  OAIOrderItemSubsidyDTO.h
  OAIOrderItemSubsidyType.h
  OAIOrderItemsModificationRequestReasonType.h
  OAIOrderItemsModificationResultDTO.h
  OAIOrderLabelDTO.h
  OAIOrderLiftType.h
  OAIOrderParcelBoxDTO.h
  OAIOrderPaymentMethodType.h
  OAIOrderPaymentType.h
  OAIOrderPromoType.h
  OAIOrderShipmentDTO.h
  OAIOrderStateDTO.h
  OAIOrderStatsStatusType.h
  OAIOrderStatusChangeDTO.h
  OAIOrderStatusChangeDeliveryDTO.h
  OAIOrderStatusChangeDeliveryDatesDTO.h
  OAIOrderStatusType.h
  OAIOrderSubsidyDTO.h
  OAIOrderSubsidyType.h
  OAIOrderSubstatusType.h
  OAIOrderTaxSystemType.h
  OAIOrderTrackDTO.h
  OAIOrderUpdateStatusType.h
  OAIOrderVatType.h
  OAIOrdersShipmentInfoDTO.h
  OAIOrdersStatsCommissionDTO.h
  OAIOrdersStatsCommissionType.h
  OAIOrdersStatsDTO.h
  OAIOrdersStatsDeliveryRegionDTO.h
  OAIOrdersStatsDetailsDTO.h
  OAIOrdersStatsItemDTO.h
  OAIOrdersStatsItemStatusType.h
  OAIOrdersStatsOrderDTO.h
  OAIOrdersStatsOrderPaymentType.h
  OAIOrdersStatsPaymentDTO.h
  OAIOrdersStatsPaymentOrderDTO.h
  OAIOrdersStatsPaymentSourceType.h
  OAIOrdersStatsPaymentType.h
  OAIOrdersStatsPriceDTO.h
  OAIOrdersStatsPriceType.h
  OAIOrdersStatsStockType.h
  OAIOrdersStatsWarehouseDTO.h
  OAIOutletAddressDTO.h
  OAIOutletDTO.h
  OAIOutletDeliveryRuleDTO.h
  OAIOutletLicenseDTO.h
  OAIOutletLicensesResponseDTO.h
  OAIOutletResponseDTO.h
  OAIOutletStatusType.h
  OAIOutletType.h
  OAIOutletVisibilityType.h
  OAIOutletWorkingScheduleDTO.h
  OAIOutletWorkingScheduleItemDTO.h
  OAIPageFormatType.h
  OAIPagedReturnsDTO.h
  OAIPalletsCountDTO.h
  OAIParameterType.h
  OAIParameterValueConstraintsDTO.h
  OAIParameterValueDTO.h
  OAIParameterValueOptionDTO.h
  OAIParcelBoxDTO.h
  OAIParcelBoxLabelDTO.h
  OAIParcelDTO.h
  OAIPartnerShipmentWarehouseDTO.h
  OAIPaymentFrequencyType.h
  OAIPickupAddressDTO.h
  OAIPlacementType.h
  OAIPriceCompetitivenessThresholdsDTO.h
  OAIPriceCompetitivenessType.h
  OAIPriceDTO.h
  OAIPriceQuarantineVerdictDTO.h
  OAIPriceQuarantineVerdictParamNameType.h
  OAIPriceQuarantineVerdictParameterDTO.h
  OAIPriceQuarantineVerdictType.h
  OAIPriceRecommendationItemDTO.h
  OAIPriceSuggestDTO.h
  OAIPriceSuggestOfferDTO.h
  OAIPriceSuggestType.h
  OAIPromoOfferAutoParticipatingDetailsDTO.h
  OAIPromoOfferDiscountParamsDTO.h
  OAIPromoOfferParamsDTO.h
  OAIPromoOfferParticipationStatusFilterType.h
  OAIPromoOfferParticipationStatusType.h
  OAIPromoOfferPromocodeParamsDTO.h
  OAIPromoOfferUpdateWarningCodeType.h
  OAIPromoOfferUpdateWarningDTO.h
  OAIPromoParticipationType.h
  OAIPromoPeriodDTO.h
  OAIProvideOrderDigitalCodesRequest.h
  OAIProvideOrderItemIdentifiersRequest.h
  OAIProvideOrderItemIdentifiersResponse.h
  OAIPutSkuBidsRequest.h
  OAIQualityRatingAffectedOrderDTO.h
  OAIQualityRatingComponentDTO.h
  OAIQualityRatingComponentType.h
  OAIQualityRatingDTO.h
  OAIQualityRatingDetailsDTO.h
  OAIQuantumDTO.h
  OAIQuarantineOfferDTO.h
  OAIRecipientType.h
  OAIRefundStatusType.h
  OAIRegionDTO.h
  OAIRegionType.h
  OAIRegionalModelInfoDTO.h
  OAIRejectedPromoOfferDeleteDTO.h
  OAIRejectedPromoOfferDeleteReasonType.h
  OAIRejectedPromoOfferUpdateDTO.h
  OAIRejectedPromoOfferUpdateReasonType.h
  OAIReportFormatType.h
  OAIReportInfoDTO.h
  OAIReportStatusType.h
  OAIReportSubStatusType.h
  OAIReturnDTO.h
  OAIReturnDecisionDTO.h
  OAIReturnDecisionReasonType.h
  OAIReturnDecisionSubreasonType.h
  OAIReturnDecisionType.h
  OAIReturnInstanceDTO.h
  OAIReturnInstanceStatusType.h
  OAIReturnInstanceStockType.h
  OAIReturnItemDTO.h
  OAIReturnRequestDecisionType.h
  OAIReturnShipmentStatusType.h
  OAIReturnType.h
  OAIScrollingPagerDTO.h
  OAISearchModelsResponse.h
  OAISearchShipmentsRequest.h
  OAISearchShipmentsResponse.h
  OAISearchShipmentsResponseDTO.h
  OAISellingProgramType.h
  OAISendMessageToChatRequest.h
  OAISetFeedParamsRequest.h
  OAISetOrderBoxLayoutRequest.h
  OAISetOrderBoxLayoutResponse.h
  OAISetOrderDeliveryDateRequest.h
  OAISetOrderDeliveryTrackCodeRequest.h
  OAISetOrderShipmentBoxesRequest.h
  OAISetOrderShipmentBoxesResponse.h
  OAISetReturnDecisionRequest.h
  OAISetShipmentPalletsCountRequest.h
  OAIShelfsStatisticsAttributionType.h
  OAIShipmentActionType.h
  OAIShipmentBoxesDTO.h
  OAIShipmentDTO.h
  OAIShipmentInfoDTO.h
  OAIShipmentPalletLabelPageFormatType.h
  OAIShipmentStatusChangeDTO.h
  OAIShipmentStatusType.h
  OAIShipmentType.h
  OAIShowsSalesGroupingType.h
  OAISkipGoodsFeedbackReactionRequest.h
  OAISkuBidItemDTO.h
  OAISkuBidRecommendationItemDTO.h
  OAISortOrderType.h
  OAISuggestOfferPriceDTO.h
  OAISuggestPricesRequest.h
  OAISuggestPricesResponse.h
  OAISuggestPricesResultDTO.h
  OAISuggestedOfferDTO.h
  OAISuggestedOfferMappingDTO.h
  OAITariffDTO.h
  OAITariffParameterDTO.h
  OAITariffType.h
  OAITimePeriodDTO.h
  OAITimeUnitType.h
  OAITrackDTO.h
  OAITransferOrdersFromShipmentRequest.h
  OAITurnoverDTO.h
  OAITurnoverType.h
  OAIUnitDTO.h
  OAIUpdateBusinessOfferPriceDTO.h
  OAIUpdateBusinessPricesRequest.h
  OAIUpdateCampaignOfferDTO.h
  OAIUpdateCampaignOffersRequest.h
  OAIUpdateGoodsFeedbackCommentDTO.h
  OAIUpdateGoodsFeedbackCommentRequest.h
  OAIUpdateGoodsFeedbackCommentResponse.h
  OAIUpdateMappingDTO.h
  OAIUpdateMappingsOfferDTO.h
  OAIUpdateOfferContentRequest.h
  OAIUpdateOfferContentResponse.h
  OAIUpdateOfferContentResultDTO.h
  OAIUpdateOfferDTO.h
  OAIUpdateOfferMappingDTO.h
  OAIUpdateOfferMappingEntryDTO.h
  OAIUpdateOfferMappingEntryRequest.h
  OAIUpdateOfferMappingResultDTO.h
  OAIUpdateOfferMappingsRequest.h
  OAIUpdateOfferMappingsResponse.h
  OAIUpdateOrderItemRequest.h
  OAIUpdateOrderStatusDTO.h
  OAIUpdateOrderStatusRequest.h
  OAIUpdateOrderStatusResponse.h
  OAIUpdateOrderStatusesDTO.h
  OAIUpdateOrderStatusesRequest.h
  OAIUpdateOrderStatusesResponse.h
  OAIUpdateOrderStorageLimitRequest.h
  OAIUpdateOutletLicenseRequest.h
  OAIUpdatePriceWithDiscountDTO.h
  OAIUpdatePricesRequest.h
  OAIUpdatePromoOfferDTO.h
  OAIUpdatePromoOfferDiscountParamsDTO.h
  OAIUpdatePromoOfferParamsDTO.h
  OAIUpdatePromoOffersRequest.h
  OAIUpdatePromoOffersResponse.h
  OAIUpdatePromoOffersResultDTO.h
  OAIUpdateStockDTO.h
  OAIUpdateStockItemDTO.h
  OAIUpdateStocksRequest.h
  OAIUpdateTimeDTO.h
  OAIValueRestrictionDTO.h
  OAIVerifyOrderEacRequest.h
  OAIVerifyOrderEacResponse.h
  OAIWarehouseAddressDTO.h
  OAIWarehouseDTO.h
  OAIWarehouseGroupDTO.h
  OAIWarehouseOfferDTO.h
  OAIWarehouseOffersDTO.h
  OAIWarehouseStockDTO.h
  OAIWarehouseStockType.h
  OAIWarehousesDTO.h
  OAIWarningPromoOfferUpdateDTO.h
  OAIBidsApi.h
  OAIBusinessOfferMappingsApi.h
  OAIBusinessesApi.h
  OAICampaignsApi.h
  OAICategoriesApi.h
  OAIChatsApi.h
  OAIContentApi.h
  OAIDbsApi.h
  OAIDeliveryServicesApi.h
  OAIExpressApi.h
  OAIFbsApi.h
  OAIFbyApi.h
  OAIFeedbacksApi.h
  OAIFeedsApi.h
  OAIGoodsFeedbackApi.h
  OAIGoodsStatsApi.h
  OAIHiddenOffersApi.h
  OAIModelsApi.h
  OAIOfferMappingsApi.h
  OAIOffersApi.h
  OAIOrderBusinessInformationApi.h
  OAIOrderDeliveryApi.h
  OAIOrderLabelsApi.h
  OAIOrdersApi.h
  OAIOrdersStatsApi.h
  OAIOutletLicensesApi.h
  OAIOutletsApi.h
  OAIPriceQuarantineApi.h
  OAIPricesApi.h
  OAIPromosApi.h
  OAIRatingsApi.h
  OAIRegionsApi.h
  OAIReportsApi.h
  OAIReturnsApi.h
  OAIShipmentsApi.h
  OAIStocksApi.h
  OAITariffsApi.h
  OAIWarehousesApi.h
  OAIHelpers.h
  OAIHttpRequest.h
  OAIObject.h
  OAIEnum.h
  OAIHttpFileElement.h
  OAIServerConfiguration.h
  OAIServerVariable.h
  OAIOauth.h
  OAIAcceptOrderCancellationRequest.cpp
  OAIAddHiddenOffersRequest.cpp
  OAIAddOffersToArchiveDTO.cpp
  OAIAddOffersToArchiveErrorDTO.cpp
  OAIAddOffersToArchiveErrorType.cpp
  OAIAddOffersToArchiveRequest.cpp
  OAIAddOffersToArchiveResponse.cpp
  OAIAffectedOrderQualityRatingComponentType.cpp
  OAIAgeDTO.cpp
  OAIAgeUnitType.cpp
  OAIApiClientDataErrorResponse.cpp
  OAIApiErrorDTO.cpp
  OAIApiErrorResponse.cpp
  OAIApiForbiddenErrorResponse.cpp
  OAIApiLimitErrorResponse.cpp
  OAIApiLockedErrorResponse.cpp
  OAIApiNotFoundErrorResponse.cpp
  OAIApiResponse.cpp
  OAIApiResponseStatusType.cpp
  OAIApiServerErrorResponse.cpp
  OAIApiUnauthorizedErrorResponse.cpp
  OAIBaseCampaignOfferDTO.cpp
  OAIBaseOfferDTO.cpp
  OAIBasePriceDTO.cpp
  OAIBaseShipmentDTO.cpp
  OAIBidRecommendationItemDTO.cpp
  OAIBriefOrderItemDTO.cpp
  OAIBriefOrderItemInstanceDTO.cpp
  OAIBusinessDTO.cpp
  OAIBusinessSettingsDTO.cpp
  OAICalculateTariffsOfferDTO.cpp
  OAICalculateTariffsOfferInfoDTO.cpp
  OAICalculateTariffsParametersDTO.cpp
  OAICalculateTariffsRequest.cpp
  OAICalculateTariffsResponse.cpp
  OAICalculateTariffsResponseDTO.cpp
  OAICalculatedTariffDTO.cpp
  OAICalculatedTariffType.cpp
  OAICampaignDTO.cpp
  OAICampaignQualityRatingDTO.cpp
  OAICampaignSettingsDTO.cpp
  OAICampaignSettingsDeliveryDTO.cpp
  OAICampaignSettingsLocalRegionDTO.cpp
  OAICampaignSettingsScheduleDTO.cpp
  OAICampaignSettingsScheduleSourceType.cpp
  OAICampaignSettingsTimePeriodDTO.cpp
  OAICampaignsQualityRatingDTO.cpp
  OAICategoryContentParametersDTO.cpp
  OAICategoryDTO.cpp
  OAICategoryErrorDTO.cpp
  OAICategoryErrorType.cpp
  OAICategoryParameterDTO.cpp
  OAICategoryParameterUnitDTO.cpp
  OAIChangeOutletRequest.cpp
  OAIChannelType.cpp
  OAIChatMessageDTO.cpp
  OAIChatMessagePayloadDTO.cpp
  OAIChatMessageSenderType.cpp
  OAIChatMessagesResultDTO.cpp
  OAIChatStatusType.cpp
  OAIChatType.cpp
  OAIConfirmPricesRequest.cpp
  OAIConfirmShipmentRequest.cpp
  OAICreateChatRequest.cpp
  OAICreateChatResponse.cpp
  OAICreateChatResultDTO.cpp
  OAICreateOutletResponse.cpp
  OAICurrencyType.cpp
  OAIDayOfWeekType.cpp
  OAIDeleteCampaignOffersDTO.cpp
  OAIDeleteCampaignOffersRequest.cpp
  OAIDeleteCampaignOffersResponse.cpp
  OAIDeleteGoodsFeedbackCommentRequest.cpp
  OAIDeleteHiddenOffersRequest.cpp
  OAIDeleteOffersDTO.cpp
  OAIDeleteOffersFromArchiveDTO.cpp
  OAIDeleteOffersFromArchiveRequest.cpp
  OAIDeleteOffersFromArchiveResponse.cpp
  OAIDeleteOffersRequest.cpp
  OAIDeleteOffersResponse.cpp
  OAIDeletePromoOffersRequest.cpp
  OAIDeletePromoOffersResponse.cpp
  OAIDeletePromoOffersResultDTO.cpp
  OAIDeliveryServiceDTO.cpp
  OAIDeliveryServiceInfoDTO.cpp
  OAIDeliveryServicesDTO.cpp
  OAIDocumentDTO.cpp
  OAIEacVerificationResultDTO.cpp
  OAIEacVerificationStatusType.cpp
  OAIEmptyApiResponse.cpp
  OAIEnrichedMappingsOfferDTO.cpp
  OAIEnrichedModelDTO.cpp
  OAIEnrichedModelsDTO.cpp
  OAIEnrichedOrderBoxLayoutDTO.cpp
  OAIExtensionShipmentDTO.cpp
  OAIFeedContentDTO.cpp
  OAIFeedContentErrorDTO.cpp
  OAIFeedContentErrorType.cpp
  OAIFeedDTO.cpp
  OAIFeedDownloadDTO.cpp
  OAIFeedDownloadErrorDTO.cpp
  OAIFeedDownloadErrorType.cpp
  OAIFeedIndexLogsErrorDTO.cpp
  OAIFeedIndexLogsErrorType.cpp
  OAIFeedIndexLogsFeedDTO.cpp
  OAIFeedIndexLogsIndexType.cpp
  OAIFeedIndexLogsOffersDTO.cpp
  OAIFeedIndexLogsRecordDTO.cpp
  OAIFeedIndexLogsResultDTO.cpp
  OAIFeedIndexLogsStatusType.cpp
  OAIFeedParameterDTO.cpp
  OAIFeedPlacementDTO.cpp
  OAIFeedPublicationDTO.cpp
  OAIFeedPublicationFullDTO.cpp
  OAIFeedPublicationPriceAndStockUpdateDTO.cpp
  OAIFeedStatusType.cpp
  OAIFeedbackAuthorDTO.cpp
  OAIFeedbackCommentAuthorDTO.cpp
  OAIFeedbackCommentAuthorType.cpp
  OAIFeedbackCommentDTO.cpp
  OAIFeedbackDTO.cpp
  OAIFeedbackDeliveryType.cpp
  OAIFeedbackFactorDTO.cpp
  OAIFeedbackGradesDTO.cpp
  OAIFeedbackListDTO.cpp
  OAIFeedbackOrderDTO.cpp
  OAIFeedbackReactionStatusType.cpp
  OAIFeedbackShopDTO.cpp
  OAIFeedbackStateType.cpp
  OAIFieldStateType.cpp
  OAIFlippingPagerDTO.cpp
  OAIForwardScrollingPagerDTO.cpp
  OAIFulfillmentWarehouseDTO.cpp
  OAIFulfillmentWarehousesDTO.cpp
  OAIFullOutletDTO.cpp
  OAIFullOutletLicenseDTO.cpp
  OAIGenerateBoostConsolidatedRequest.cpp
  OAIGenerateCompetitorsPositionReportRequest.cpp
  OAIGenerateGoodsFeedbackRequest.cpp
  OAIGenerateGoodsMovementReportRequest.cpp
  OAIGenerateGoodsRealizationReportRequest.cpp
  OAIGenerateGoodsTurnoverRequest.cpp
  OAIGenerateMassOrderLabelsRequest.cpp
  OAIGeneratePricesReportRequest.cpp
  OAIGenerateReportDTO.cpp
  OAIGenerateReportResponse.cpp
  OAIGenerateShelfsStatisticsRequest.cpp
  OAIGenerateShipmentListDocumentReportRequest.cpp
  OAIGenerateShowsSalesReportRequest.cpp
  OAIGenerateStocksOnWarehousesReportRequest.cpp
  OAIGenerateUnitedMarketplaceServicesReportRequest.cpp
  OAIGenerateUnitedNettingReportRequest.cpp
  OAIGenerateUnitedOrdersRequest.cpp
  OAIGetAllOffersResponse.cpp
  OAIGetBidsInfoRequest.cpp
  OAIGetBidsInfoResponse.cpp
  OAIGetBidsInfoResponseDTO.cpp
  OAIGetBidsRecommendationsRequest.cpp
  OAIGetBidsRecommendationsResponse.cpp
  OAIGetBidsRecommendationsResponseDTO.cpp
  OAIGetBusinessBuyerInfoResponse.cpp
  OAIGetBusinessDocumentsInfoResponse.cpp
  OAIGetBusinessSettingsInfoDTO.cpp
  OAIGetBusinessSettingsResponse.cpp
  OAIGetCampaignLoginsResponse.cpp
  OAIGetCampaignOfferDTO.cpp
  OAIGetCampaignOffersRequest.cpp
  OAIGetCampaignOffersResponse.cpp
  OAIGetCampaignOffersResultDTO.cpp
  OAIGetCampaignRegionResponse.cpp
  OAIGetCampaignResponse.cpp
  OAIGetCampaignSettingsResponse.cpp
  OAIGetCampaignsResponse.cpp
  OAIGetCategoriesMaxSaleQuantumDTO.cpp
  OAIGetCategoriesMaxSaleQuantumRequest.cpp
  OAIGetCategoriesMaxSaleQuantumResponse.cpp
  OAIGetCategoriesRequest.cpp
  OAIGetCategoriesResponse.cpp
  OAIGetCategoryContentParametersResponse.cpp
  OAIGetChatHistoryRequest.cpp
  OAIGetChatHistoryResponse.cpp
  OAIGetChatInfoDTO.cpp
  OAIGetChatsInfoDTO.cpp
  OAIGetChatsRequest.cpp
  OAIGetChatsResponse.cpp
  OAIGetDeliveryServicesResponse.cpp
  OAIGetFeedIndexLogsResponse.cpp
  OAIGetFeedResponse.cpp
  OAIGetFeedbackListResponse.cpp
  OAIGetFeedsResponse.cpp
  OAIGetFulfillmentWarehousesResponse.cpp
  OAIGetGoodsFeedbackCommentsRequest.cpp
  OAIGetGoodsFeedbackCommentsResponse.cpp
  OAIGetGoodsFeedbackRequest.cpp
  OAIGetGoodsFeedbackResponse.cpp
  OAIGetGoodsStatsRequest.cpp
  OAIGetGoodsStatsResponse.cpp
  OAIGetHiddenOffersResponse.cpp
  OAIGetHiddenOffersResultDTO.cpp
  OAIGetMappingDTO.cpp
  OAIGetModelsOffersResponse.cpp
  OAIGetModelsRequest.cpp
  OAIGetModelsResponse.cpp
  OAIGetOfferCardsContentStatusRequest.cpp
  OAIGetOfferCardsContentStatusResponse.cpp
  OAIGetOfferDTO.cpp
  OAIGetOfferMappingDTO.cpp
  OAIGetOfferMappingEntriesResponse.cpp
  OAIGetOfferMappingsRequest.cpp
  OAIGetOfferMappingsResponse.cpp
  OAIGetOfferMappingsResultDTO.cpp
  OAIGetOfferRecommendationsRequest.cpp
  OAIGetOfferRecommendationsResponse.cpp
  OAIGetOffersResponse.cpp
  OAIGetOrderBuyerInfoResponse.cpp
  OAIGetOrderLabelsDataResponse.cpp
  OAIGetOrderResponse.cpp
  OAIGetOrdersResponse.cpp
  OAIGetOrdersStatsRequest.cpp
  OAIGetOrdersStatsResponse.cpp
  OAIGetOutletLicensesResponse.cpp
  OAIGetOutletResponse.cpp
  OAIGetOutletsResponse.cpp
  OAIGetPriceDTO.cpp
  OAIGetPriceWithDiscountDTO.cpp
  OAIGetPriceWithVatDTO.cpp
  OAIGetPricesByOfferIdsRequest.cpp
  OAIGetPricesByOfferIdsResponse.cpp
  OAIGetPricesResponse.cpp
  OAIGetPromoAssortmentInfoDTO.cpp
  OAIGetPromoBestsellerInfoDTO.cpp
  OAIGetPromoConstraintsDTO.cpp
  OAIGetPromoDTO.cpp
  OAIGetPromoMechanicsInfoDTO.cpp
  OAIGetPromoOfferDTO.cpp
  OAIGetPromoOffersRequest.cpp
  OAIGetPromoOffersResponse.cpp
  OAIGetPromoOffersResultDTO.cpp
  OAIGetPromoPromocodeInfoDTO.cpp
  OAIGetPromosRequest.cpp
  OAIGetPromosResponse.cpp
  OAIGetPromosResultDTO.cpp
  OAIGetQualityRatingDetailsResponse.cpp
  OAIGetQualityRatingRequest.cpp
  OAIGetQualityRatingResponse.cpp
  OAIGetQuarantineOffersRequest.cpp
  OAIGetQuarantineOffersResponse.cpp
  OAIGetQuarantineOffersResultDTO.cpp
  OAIGetRegionWithChildrenResponse.cpp
  OAIGetRegionsResponse.cpp
  OAIGetReportInfoResponse.cpp
  OAIGetReturnResponse.cpp
  OAIGetReturnsResponse.cpp
  OAIGetShipmentOrdersInfoResponse.cpp
  OAIGetShipmentResponse.cpp
  OAIGetSuggestedOfferMappingEntriesRequest.cpp
  OAIGetSuggestedOfferMappingEntriesResponse.cpp
  OAIGetSuggestedOfferMappingsRequest.cpp
  OAIGetSuggestedOfferMappingsResponse.cpp
  OAIGetSuggestedOfferMappingsResultDTO.cpp
  OAIGetWarehouseStocksDTO.cpp
  OAIGetWarehouseStocksRequest.cpp
  OAIGetWarehouseStocksResponse.cpp
  OAIGetWarehousesResponse.cpp
  OAIGoodsFeedbackCommentAuthorDTO.cpp
  OAIGoodsFeedbackCommentAuthorType.cpp
  OAIGoodsFeedbackCommentDTO.cpp
  OAIGoodsFeedbackCommentListDTO.cpp
  OAIGoodsFeedbackCommentStatusType.cpp
  OAIGoodsFeedbackDTO.cpp
  OAIGoodsFeedbackDescriptionDTO.cpp
  OAIGoodsFeedbackIdentifiersDTO.cpp
  OAIGoodsFeedbackListDTO.cpp
  OAIGoodsFeedbackMediaDTO.cpp
  OAIGoodsFeedbackStatisticsDTO.cpp
  OAIGoodsStatsDTO.cpp
  OAIGoodsStatsGoodsDTO.cpp
  OAIGoodsStatsWarehouseDTO.cpp
  OAIGoodsStatsWeightDimensionsDTO.cpp
  OAIGpsDTO.cpp
  OAIHiddenOfferDTO.cpp
  OAILanguageType.cpp
  OAILicenseCheckStatusType.cpp
  OAILicenseType.cpp
  OAILogisticPickupPointDTO.cpp
  OAILogisticPointType.cpp
  OAIMappingsOfferDTO.cpp
  OAIMappingsOfferInfoDTO.cpp
  OAIMaxSaleQuantumDTO.cpp
  OAIMechanicsType.cpp
  OAIModelDTO.cpp
  OAIModelOfferDTO.cpp
  OAIModelPriceDTO.cpp
  OAIModelsDTO.cpp
  OAIOfferAvailabilityStatusType.cpp
  OAIOfferCampaignStatusDTO.cpp
  OAIOfferCampaignStatusType.cpp
  OAIOfferCardDTO.cpp
  OAIOfferCardRecommendationDTO.cpp
  OAIOfferCardRecommendationType.cpp
  OAIOfferCardStatusType.cpp
  OAIOfferCardsContentStatusDTO.cpp
  OAIOfferConditionDTO.cpp
  OAIOfferConditionQualityType.cpp
  OAIOfferConditionType.cpp
  OAIOfferContentDTO.cpp
  OAIOfferContentErrorDTO.cpp
  OAIOfferContentErrorType.cpp
  OAIOfferDTO.cpp
  OAIOfferErrorDTO.cpp
  OAIOfferForRecommendationDTO.cpp
  OAIOfferManualDTO.cpp
  OAIOfferMappingDTO.cpp
  OAIOfferMappingEntriesDTO.cpp
  OAIOfferMappingEntryDTO.cpp
  OAIOfferMappingErrorDTO.cpp
  OAIOfferMappingErrorType.cpp
  OAIOfferMappingInfoDTO.cpp
  OAIOfferMappingKindType.cpp
  OAIOfferMappingSuggestionsListDTO.cpp
  OAIOfferParamDTO.cpp
  OAIOfferPriceByOfferIdsListResponseDTO.cpp
  OAIOfferPriceByOfferIdsResponseDTO.cpp
  OAIOfferPriceDTO.cpp
  OAIOfferPriceListResponseDTO.cpp
  OAIOfferPriceResponseDTO.cpp
  OAIOfferProcessingNoteDTO.cpp
  OAIOfferProcessingNoteType.cpp
  OAIOfferProcessingStateDTO.cpp
  OAIOfferProcessingStatusType.cpp
  OAIOfferRecommendationDTO.cpp
  OAIOfferRecommendationInfoDTO.cpp
  OAIOfferRecommendationsResultDTO.cpp
  OAIOfferSellingProgramDTO.cpp
  OAIOfferSellingProgramStatusType.cpp
  OAIOfferType.cpp
  OAIOfferWeightDimensionsDTO.cpp
  OAIOffersDTO.cpp
  OAIOptionValuesLimitedDTO.cpp
  OAIOrderBoxLayoutDTO.cpp
  OAIOrderBoxLayoutItemDTO.cpp
  OAIOrderBoxLayoutPartialCountDTO.cpp
  OAIOrderBoxesLayoutDTO.cpp
  OAIOrderBusinessBuyerDTO.cpp
  OAIOrderBusinessDocumentsDTO.cpp
  OAIOrderBuyerBasicInfoDTO.cpp
  OAIOrderBuyerDTO.cpp
  OAIOrderBuyerInfoDTO.cpp
  OAIOrderBuyerType.cpp
  OAIOrderCancellationReasonType.cpp
  OAIOrderCourierDTO.cpp
  OAIOrderDTO.cpp
  OAIOrderDeliveryAddressDTO.cpp
  OAIOrderDeliveryDTO.cpp
  OAIOrderDeliveryDateDTO.cpp
  OAIOrderDeliveryDateReasonType.cpp
  OAIOrderDeliveryDatesDTO.cpp
  OAIOrderDeliveryDispatchType.cpp
  OAIOrderDeliveryEacType.cpp
  OAIOrderDeliveryPartnerType.cpp
  OAIOrderDeliveryType.cpp
  OAIOrderDigitalItemDTO.cpp
  OAIOrderDocumentStatusType.cpp
  OAIOrderItemDTO.cpp
  OAIOrderItemDetailDTO.cpp
  OAIOrderItemInstanceDTO.cpp
  OAIOrderItemInstanceModificationDTO.cpp
  OAIOrderItemInstanceType.cpp
  OAIOrderItemModificationDTO.cpp
  OAIOrderItemPromoDTO.cpp
  OAIOrderItemStatusType.cpp
  OAIOrderItemSubsidyDTO.cpp
  OAIOrderItemSubsidyType.cpp
  OAIOrderItemsModificationRequestReasonType.cpp
  OAIOrderItemsModificationResultDTO.cpp
  OAIOrderLabelDTO.cpp
  OAIOrderLiftType.cpp
  OAIOrderParcelBoxDTO.cpp
  OAIOrderPaymentMethodType.cpp
  OAIOrderPaymentType.cpp
  OAIOrderPromoType.cpp
  OAIOrderShipmentDTO.cpp
  OAIOrderStateDTO.cpp
  OAIOrderStatsStatusType.cpp
  OAIOrderStatusChangeDTO.cpp
  OAIOrderStatusChangeDeliveryDTO.cpp
  OAIOrderStatusChangeDeliveryDatesDTO.cpp
  OAIOrderStatusType.cpp
  OAIOrderSubsidyDTO.cpp
  OAIOrderSubsidyType.cpp
  OAIOrderSubstatusType.cpp
  OAIOrderTaxSystemType.cpp
  OAIOrderTrackDTO.cpp
  OAIOrderUpdateStatusType.cpp
  OAIOrderVatType.cpp
  OAIOrdersShipmentInfoDTO.cpp
  OAIOrdersStatsCommissionDTO.cpp
  OAIOrdersStatsCommissionType.cpp
  OAIOrdersStatsDTO.cpp
  OAIOrdersStatsDeliveryRegionDTO.cpp
  OAIOrdersStatsDetailsDTO.cpp
  OAIOrdersStatsItemDTO.cpp
  OAIOrdersStatsItemStatusType.cpp
  OAIOrdersStatsOrderDTO.cpp
  OAIOrdersStatsOrderPaymentType.cpp
  OAIOrdersStatsPaymentDTO.cpp
  OAIOrdersStatsPaymentOrderDTO.cpp
  OAIOrdersStatsPaymentSourceType.cpp
  OAIOrdersStatsPaymentType.cpp
  OAIOrdersStatsPriceDTO.cpp
  OAIOrdersStatsPriceType.cpp
  OAIOrdersStatsStockType.cpp
  OAIOrdersStatsWarehouseDTO.cpp
  OAIOutletAddressDTO.cpp
  OAIOutletDTO.cpp
  OAIOutletDeliveryRuleDTO.cpp
  OAIOutletLicenseDTO.cpp
  OAIOutletLicensesResponseDTO.cpp
  OAIOutletResponseDTO.cpp
  OAIOutletStatusType.cpp
  OAIOutletType.cpp
  OAIOutletVisibilityType.cpp
  OAIOutletWorkingScheduleDTO.cpp
  OAIOutletWorkingScheduleItemDTO.cpp
  OAIPageFormatType.cpp
  OAIPagedReturnsDTO.cpp
  OAIPalletsCountDTO.cpp
  OAIParameterType.cpp
  OAIParameterValueConstraintsDTO.cpp
  OAIParameterValueDTO.cpp
  OAIParameterValueOptionDTO.cpp
  OAIParcelBoxDTO.cpp
  OAIParcelBoxLabelDTO.cpp
  OAIParcelDTO.cpp
  OAIPartnerShipmentWarehouseDTO.cpp
  OAIPaymentFrequencyType.cpp
  OAIPickupAddressDTO.cpp
  OAIPlacementType.cpp
  OAIPriceCompetitivenessThresholdsDTO.cpp
  OAIPriceCompetitivenessType.cpp
  OAIPriceDTO.cpp
  OAIPriceQuarantineVerdictDTO.cpp
  OAIPriceQuarantineVerdictParamNameType.cpp
  OAIPriceQuarantineVerdictParameterDTO.cpp
  OAIPriceQuarantineVerdictType.cpp
  OAIPriceRecommendationItemDTO.cpp
  OAIPriceSuggestDTO.cpp
  OAIPriceSuggestOfferDTO.cpp
  OAIPriceSuggestType.cpp
  OAIPromoOfferAutoParticipatingDetailsDTO.cpp
  OAIPromoOfferDiscountParamsDTO.cpp
  OAIPromoOfferParamsDTO.cpp
  OAIPromoOfferParticipationStatusFilterType.cpp
  OAIPromoOfferParticipationStatusType.cpp
  OAIPromoOfferPromocodeParamsDTO.cpp
  OAIPromoOfferUpdateWarningCodeType.cpp
  OAIPromoOfferUpdateWarningDTO.cpp
  OAIPromoParticipationType.cpp
  OAIPromoPeriodDTO.cpp
  OAIProvideOrderDigitalCodesRequest.cpp
  OAIProvideOrderItemIdentifiersRequest.cpp
  OAIProvideOrderItemIdentifiersResponse.cpp
  OAIPutSkuBidsRequest.cpp
  OAIQualityRatingAffectedOrderDTO.cpp
  OAIQualityRatingComponentDTO.cpp
  OAIQualityRatingComponentType.cpp
  OAIQualityRatingDTO.cpp
  OAIQualityRatingDetailsDTO.cpp
  OAIQuantumDTO.cpp
  OAIQuarantineOfferDTO.cpp
  OAIRecipientType.cpp
  OAIRefundStatusType.cpp
  OAIRegionDTO.cpp
  OAIRegionType.cpp
  OAIRegionalModelInfoDTO.cpp
  OAIRejectedPromoOfferDeleteDTO.cpp
  OAIRejectedPromoOfferDeleteReasonType.cpp
  OAIRejectedPromoOfferUpdateDTO.cpp
  OAIRejectedPromoOfferUpdateReasonType.cpp
  OAIReportFormatType.cpp
  OAIReportInfoDTO.cpp
  OAIReportStatusType.cpp
  OAIReportSubStatusType.cpp
  OAIReturnDTO.cpp
  OAIReturnDecisionDTO.cpp
  OAIReturnDecisionReasonType.cpp
  OAIReturnDecisionSubreasonType.cpp
  OAIReturnDecisionType.cpp
  OAIReturnInstanceDTO.cpp
  OAIReturnInstanceStatusType.cpp
  OAIReturnInstanceStockType.cpp
  OAIReturnItemDTO.cpp
  OAIReturnRequestDecisionType.cpp
  OAIReturnShipmentStatusType.cpp
  OAIReturnType.cpp
  OAIScrollingPagerDTO.cpp
  OAISearchModelsResponse.cpp
  OAISearchShipmentsRequest.cpp
  OAISearchShipmentsResponse.cpp
  OAISearchShipmentsResponseDTO.cpp
  OAISellingProgramType.cpp
  OAISendMessageToChatRequest.cpp
  OAISetFeedParamsRequest.cpp
  OAISetOrderBoxLayoutRequest.cpp
  OAISetOrderBoxLayoutResponse.cpp
  OAISetOrderDeliveryDateRequest.cpp
  OAISetOrderDeliveryTrackCodeRequest.cpp
  OAISetOrderShipmentBoxesRequest.cpp
  OAISetOrderShipmentBoxesResponse.cpp
  OAISetReturnDecisionRequest.cpp
  OAISetShipmentPalletsCountRequest.cpp
  OAIShelfsStatisticsAttributionType.cpp
  OAIShipmentActionType.cpp
  OAIShipmentBoxesDTO.cpp
  OAIShipmentDTO.cpp
  OAIShipmentInfoDTO.cpp
  OAIShipmentPalletLabelPageFormatType.cpp
  OAIShipmentStatusChangeDTO.cpp
  OAIShipmentStatusType.cpp
  OAIShipmentType.cpp
  OAIShowsSalesGroupingType.cpp
  OAISkipGoodsFeedbackReactionRequest.cpp
  OAISkuBidItemDTO.cpp
  OAISkuBidRecommendationItemDTO.cpp
  OAISortOrderType.cpp
  OAISuggestOfferPriceDTO.cpp
  OAISuggestPricesRequest.cpp
  OAISuggestPricesResponse.cpp
  OAISuggestPricesResultDTO.cpp
  OAISuggestedOfferDTO.cpp
  OAISuggestedOfferMappingDTO.cpp
  OAITariffDTO.cpp
  OAITariffParameterDTO.cpp
  OAITariffType.cpp
  OAITimePeriodDTO.cpp
  OAITimeUnitType.cpp
  OAITrackDTO.cpp
  OAITransferOrdersFromShipmentRequest.cpp
  OAITurnoverDTO.cpp
  OAITurnoverType.cpp
  OAIUnitDTO.cpp
  OAIUpdateBusinessOfferPriceDTO.cpp
  OAIUpdateBusinessPricesRequest.cpp
  OAIUpdateCampaignOfferDTO.cpp
  OAIUpdateCampaignOffersRequest.cpp
  OAIUpdateGoodsFeedbackCommentDTO.cpp
  OAIUpdateGoodsFeedbackCommentRequest.cpp
  OAIUpdateGoodsFeedbackCommentResponse.cpp
  OAIUpdateMappingDTO.cpp
  OAIUpdateMappingsOfferDTO.cpp
  OAIUpdateOfferContentRequest.cpp
  OAIUpdateOfferContentResponse.cpp
  OAIUpdateOfferContentResultDTO.cpp
  OAIUpdateOfferDTO.cpp
  OAIUpdateOfferMappingDTO.cpp
  OAIUpdateOfferMappingEntryDTO.cpp
  OAIUpdateOfferMappingEntryRequest.cpp
  OAIUpdateOfferMappingResultDTO.cpp
  OAIUpdateOfferMappingsRequest.cpp
  OAIUpdateOfferMappingsResponse.cpp
  OAIUpdateOrderItemRequest.cpp
  OAIUpdateOrderStatusDTO.cpp
  OAIUpdateOrderStatusRequest.cpp
  OAIUpdateOrderStatusResponse.cpp
  OAIUpdateOrderStatusesDTO.cpp
  OAIUpdateOrderStatusesRequest.cpp
  OAIUpdateOrderStatusesResponse.cpp
  OAIUpdateOrderStorageLimitRequest.cpp
  OAIUpdateOutletLicenseRequest.cpp
  OAIUpdatePriceWithDiscountDTO.cpp
  OAIUpdatePricesRequest.cpp
  OAIUpdatePromoOfferDTO.cpp
  OAIUpdatePromoOfferDiscountParamsDTO.cpp
  OAIUpdatePromoOfferParamsDTO.cpp
  OAIUpdatePromoOffersRequest.cpp
  OAIUpdatePromoOffersResponse.cpp
  OAIUpdatePromoOffersResultDTO.cpp
  OAIUpdateStockDTO.cpp
  OAIUpdateStockItemDTO.cpp
  OAIUpdateStocksRequest.cpp
  OAIUpdateTimeDTO.cpp
  OAIValueRestrictionDTO.cpp
  OAIVerifyOrderEacRequest.cpp
  OAIVerifyOrderEacResponse.cpp
  OAIWarehouseAddressDTO.cpp
  OAIWarehouseDTO.cpp
  OAIWarehouseGroupDTO.cpp
  OAIWarehouseOfferDTO.cpp
  OAIWarehouseOffersDTO.cpp
  OAIWarehouseStockDTO.cpp
  OAIWarehouseStockType.cpp
  OAIWarehousesDTO.cpp
  OAIWarningPromoOfferUpdateDTO.cpp
  OAIBidsApi.cpp
  OAIBusinessOfferMappingsApi.cpp
  OAIBusinessesApi.cpp
  OAICampaignsApi.cpp
  OAICategoriesApi.cpp
  OAIChatsApi.cpp
  OAIContentApi.cpp
  OAIDbsApi.cpp
  OAIDeliveryServicesApi.cpp
  OAIExpressApi.cpp
  OAIFbsApi.cpp
  OAIFbyApi.cpp
  OAIFeedbacksApi.cpp
  OAIFeedsApi.cpp
  OAIGoodsFeedbackApi.cpp
  OAIGoodsStatsApi.cpp
  OAIHiddenOffersApi.cpp
  OAIModelsApi.cpp
  OAIOfferMappingsApi.cpp
  OAIOffersApi.cpp
  OAIOrderBusinessInformationApi.cpp
  OAIOrderDeliveryApi.cpp
  OAIOrderLabelsApi.cpp
  OAIOrdersApi.cpp
  OAIOrdersStatsApi.cpp
  OAIOutletLicensesApi.cpp
  OAIOutletsApi.cpp
  OAIPriceQuarantineApi.cpp
  OAIPricesApi.cpp
  OAIPromosApi.cpp
  OAIRatingsApi.cpp
  OAIRegionsApi.cpp
  OAIReportsApi.cpp
  OAIReturnsApi.cpp
  OAIShipmentsApi.cpp
  OAIStocksApi.cpp
  OAITariffsApi.cpp
  OAIWarehousesApi.cpp
  OAIHelpers.cpp
  OAIHttpRequest.cpp
  OAIHttpFileElement.cpp
  OAIOauth.cpp
  )

target_include_directories(${PROJECT_NAME}
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

target_link_libraries(${PROJECT_NAME}
    PUBLIC
        Qt${QT_VERSION_MAJOR}::Core
        Qt${QT_VERSION_MAJOR}::Network
        Qt${QT_VERSION_MAJOR}::Gui

)

configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in
    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
    INSTALL_DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}"
)

install(
    TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}Targets
    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
    INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}"
)

install(
    FILES ${HEADER_FILES}
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
)

install(
    FILES "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
)

install(
    EXPORT ${PROJECT_NAME}Targets
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
)
